--- a/fw.css
+++ b/fw.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fahkwang:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 :root {
   --myMargin: 3rem 4rem;
   --myPadding: 1rem 6rem;
@@ -5,6 +7,7 @@
   --grey: #9c9c9c;
   --wine: #620b0b;
   --background: #222222;
+  --font: 'Fahkwang', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 * {
@@ -18,19 +21,52 @@ html {
   font-size: 62.5%;
 }
 
+nav {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  align-items: center;
+  background-color: var(--beige);
+  padding: 1rem 2rem;
+}
+
+.nav-title {
+  color: var(--background);
+  font-size: 3rem;
+  text-align: center;
+}
+
+.nav-icon {
+  color: #ffffff;
+  font-size: 3rem;
+  text-decoration: none;
+}
+
+.nav-icon:hover {
+  color: #cccccc;
+}
+
 body {
   background-color: #000000;
   color: #ffffff;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: var(--font);
   font-size: 2rem;
-  display: grid;
-  place-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   height: 100vh;
   margin: 0;
 }
 
-
-form {
+.form-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: var(--grey);
   padding: 4rem 6rem;
   border-radius: 1rem;
@@ -46,14 +82,14 @@ label {
   margin-bottom: 1rem;
 }
 
-input[type="text"],
-input[type="password"],
+input[type='text'],
+input[type='password'],
 select {
   padding: 0.5rem;
   border-radius: 0.5rem;
   border: none;
   font-size: 2rem;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 button {
@@ -63,8 +99,9 @@ button {
   background-color: #000000;
   color: #ffffff;
   cursor: pointer;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   text-transform: uppercase;
+  position: relative;
 }
 
 #savedShows p {
@@ -83,21 +120,23 @@ button:hover {
   background-color: #000000;
 }
 
-#resetContainer {
+.resetContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 2rem;
 }
 
 #clearBtn {
-  background-color: #ffffff;
-  color: #000000;
-  font-size: 2.2rem;
+  color: #ffffff;
+  font-size: 2rem;
   border: 5px solid var(--grey);
 }
 
 #clearBtn:hover {
-  border: 8px solid var(--wine);
-  color: var(--wine);
-  font-weight: 700;
+  background-color: var(--wine);
+  text-decoration: underline;
+  border: 5px solid var(--wine);
 }
 
 .modal {
@@ -117,16 +156,16 @@ button:hover {
   width: 100%;
 }
 
-footer{
+footer {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   display: flex;
   align-items: center;
-  padding: 2rem;
-  background-color: var(--grey);
-  color: var(--wine);
+  padding: 1rem;
+  border-top: 2px solid var(--beige);
+  color: #ffffff;
 }
 
 .footer-content {
@@ -148,34 +187,39 @@ footer{
 
 .social-links li {
   margin-right: 1rem;
+  font-size: 2.2rem;
 }
 
 #my-tag {
   margin-left: auto;
   margin: 0;
   flex: 1;
+  font-size: 2.2rem;
 }
 
 a {
   text-decoration: none;
-  color: var(--wine);
+  color: #ffffff;
 }
 
 a:hover {
   color: var(--background);
 }
 
-
 @media screen and (max-width: 425px) {
   body {
     display: block;
-    margin: 2rem;
+    position: relative;
   }
 
-  .area {
-    display: block;
-    text-align: center;
-    max-width: 100%;
-    margin: 0 auto;
+  nav {
+    position: relative;
+    margin-bottom: 2rem;
+  }
+
+  .form-container {
+    position: relative;
+    padding: 2rem 3rem;
+    border-radius: 0.5rem;
   }
 }
